--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,19 @@
 .square:focus {
   outline: none;
 }
+
+.board-row:after {
+  clear: both;
+  content: '';
+  display: table;
+}
+
+.game {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+}
